Thu Jul 18 19:31:53 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* auth.c (S_auth_makeauth): It's fine if a passed in auth port is
	not one we know about; just make the loops across AUTHS deal
	properly with null values.  Only deallocate the AUTHPTS passed in
	if we don't encounter any errors.  Always deallocate the
	references in the AUTHS array.
	(struct pending): Delete member `passthrough_type'.
	(S_auth_user_authenticate): Always use MOVE_SEND to send pass
	through port back to user.
	(S_auth_server_authenticate): Don't bother initializing
	U.passthrough_type or S.passthrough_type.

Sat Jul  6 23:16:42 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* auth.c (AUTH_VERSION): New macro.
	(argp_program_version): New variable.
	(auth_version): Variable removed.
	(main): Call argp_parse to get defaults.
	Use AUTH_VERSION instead of auth_version.
	<argp.h>: New include.
	<idvec.h>: Changed from <hurd/idvec.h>.

Wed Jun 26 14:22:51 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* auth.c (S_auth_makeauth): Don't special-case the 0 explicit ids
	case (it used to merge in all the ids from passed in auth-handles
	in that case).

Mon May  6 14:22:13 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* auth.c (auth_version): Upgrade to 0.0.

Sat May  4 22:40:42 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* auth.c (S_auth_user_authenticate, S_auth_server_authenticate):
 	Use ports_interrupt_self_on_port_death instead of
 	cancel_on_dead_name.  Hurd_condition_wait returns a boolean, not
 	an error_t, so supply EINTR ourselves.
	(cancel_on_dead_name): Function removed.

Fri May  3 17:07:45 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* auth.c (S_auth_server_authenticate, S_auth_user_authenticate):
 	Remove IGNORED arg.

Tue Apr 30 21:16:07 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* auth.c (S_auth_makeauth): Increment NAUTHS for first elt.
	(main): Initialize the ihash tables, dammit.
